<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/selectDate"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_30dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="@dimen/_22dp"
    app:strokeColor="#D8BFD8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/selectDates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/select_date"
            android:layout_marginTop="@dimen/_22dp"
            android:layout_marginStart="@dimen/_30dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/enterDates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/enter_dates"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_22dp"
            android:layout_marginStart="@dimen/_30dp"
            app:layout_constraintTop_toBottomOf="@id/selectDates"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/calendarButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="@dimen/_30dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectDates"
            app:srcCompat="@drawable/ic_calendar_48" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#D8BFD8"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterDates" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startDate"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22dp"
            android:layout_marginStart="@dimen/_30dp"
            android:hint="@string/date"
            app:expandedHintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startDateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/preview_date"
                android:background="@null"
                android:padding="@dimen/_8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/endDate"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22dp"
            android:layout_marginEnd="@dimen/_30dp"
            android:hint="@string/end_date"
            app:expandedHintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/endDateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/preview_date"
                android:background="@null"
                android:padding="@dimen/_8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok"
            style="@style/App.Widget.LikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/_30dp"
            android:contentDescription="@string/ok"
            android:text="@string/okay"
            android:textColor="#663399"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endDate"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/App.Widget.LikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/_22dp"
            android:contentDescription="@string/cancel"
            android:text="@string/cancel"
            android:textColor="#663399"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/ok"
            app:layout_constraintTop_toBottomOf="@+id/endDate"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            app:layoutManager="androidx.cardview.widget.CardView"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/_30dp"
            app:strokeColor="#D8BFD8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>